Issues Fixed For deployement.